<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/dialog_share_with_that"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        tools:background="@drawable/card_top_corners_light"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/share_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/round_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/googleMaps"
                android:src="@drawable/g_maps_logo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/phenomena_regular"
                android:text="@string/share_via_google_maps"
                android:textColor="?attr/tintColour"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/round_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/googleMaps"
                android:padding="@dimen/here_maps_image_padding"
                android:src="@drawable/here_logo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/phenomena_regular"
                android:text="@string/share_via_here_maps"
                android:textColor="?attr/tintColour"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/round_ripple"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/googleMaps"
                android:padding="@dimen/open_street_image_padding"
                android:src="@drawable/open_street_logo" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/phenomena_regular"
                android:text="@string/share_via_open_street"
                android:textColor="?attr/tintColour"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>